--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
@@ -21,6 +22,22 @@ allprojects {
         google()
         jcenter()
         
+    }
+}
+
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.google.android.gms'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "+"
+            }
+
+            if (details.requested.group == 'com.google.firebase'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "+"
+            }
+        }
     }
 }
 
