채팅 기능 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChatListActivity" />
+        <activity android:name=".ChatActivity" />
     </application>
 
 </manifest>
