--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     //glider
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    //swipelayout
+    implementation 'com.android.support:support-v4:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
