--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     signingConfigs {
 
@@ -30,9 +30,9 @@ android {
     defaultConfig {
         applicationId "com.iseokchan.dorandoran"
         minSdkVersion 16
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 29
+        versionCode 2
+        versionName "2.0"
 
         multiDexEnabled true
 
@@ -72,7 +72,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.material:material:1.1.0'
 
-    implementation 'com.google.firebase:firebase-messaging:20.1.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.3'
+
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
+    //cloud storage
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
 
     // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-play-services
     implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-play-services', version: '1.3.4'
@@ -81,8 +86,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
-    //swipelayout
-    implementation 'com.android.support:support-v4:28.0.0'
+    //viewpager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
