출시용 최소 앱 버전 검사 로직 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:noHistory="false"
+        android:name=".DoranDoranApplication"
         android:theme="@style/AppTheme">
 
 
