--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "com.iseokchan.dorandoran"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 3
-        versionName "3.0"
+        versionCode 4
+        versionName "4.0"
 
         multiDexEnabled true
 
@@ -88,6 +88,9 @@ dependencies {
 
     //viewpager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //remote config
+    implementation "com.google.firebase:firebase-config:19.1.3"
 }
 
 apply plugin: 'com.google.gms.google-services'
