파이어베이스 변수 application 클래스로 이동 Activity 흐름 변경 FCM 로직 변경 대응

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
 
         <service
             android:name=".services.ChatFirebaseMessagingService"
-            android:exported="false">
+            android:exported="false"
+            android:label="메시지">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
