푸시 알림 커스터마이징 구현 FCM default channel id 설정 Auth state listener 로직 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:name=".DoranDoranApplication"
         android:theme="@style/AppTheme">
 
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/NEW_MESSAGE_CHANNEL_ID"/>
 
         <activity
             android:name=".SplashActivity"
